2022-01-15  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* lib/sensors/bme280.py:

	  - Re-read chip data after a soft reset.


2022-01-14  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* VERSION:

	  - Updated to v0.0.1.

	* ChangeLog:

	  - Change log started.